manifests/istio-jwt-validator.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-validator"
  namespace: default
spec:
  jwtRules:
    - issuer: "istio-auth-poc"
      jwksUri: "http://authorization.default.svc.cluster.local:4000/jwk"
