manifests/sample-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: samplesvc
  labels:
    app: samplesvc
    service: samplesvc
spec:
  ports:
    - port: 4000
      name: http
  selector:
    app: samplesvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplesvc-v1
  labels:
    app: samplesvc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samplesvc
      version: v1
  template:
    metadata:
      labels:
        app: samplesvc
        version: v1
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: samplesvc
          image: samplesvc
          imagePullPolicy: Never
          ports:
            - containerPort: 4000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: samplesvc
spec:
  hosts:
    - "samplesvc.com"
  gateways:
    - authorization-gateway
  http:
    - name: "authorization-v1"
      route:
        - destination:
            host: samplesvc.default.svc.cluster.local
